tryphon_macros/tests/ui/fail/enum_tuple_variant.rs
use tryphon::ConfigValueDecoder;

#[derive(ConfigValueDecoder)]
enum BadLevel {
    Low,
    High(u32),  // Tuple variant
}

fn main() {}
